test/Constraints/metatypes.code
// RUN: %target-typecheck-verify-language

class A {}
class B : A {}

immutable test0 : A.Type = A.this
immutable test1 : A.Type = B.this
immutable test2 : B.Type = A.this // expected-error {{cannot convert value of type 'A.Type' to specified type 'B.Type'}}
immutable test3 : AnyClass = A.this
immutable test4 : AnyClass = B.this

struct S {}

immutable test5 : S.Type = S.this
immutable test6 : AnyClass = S.this // expected-error {{cannot convert value of type 'S.Type' to specified type 'AnyClass' (aka 'any AnyObject.Type')}}

fn acceptMeta<T>(_ meta: T.Type) { }
acceptMeta(A) // expected-error {{expected member name or initializer call after type name}}
// expected-note@-1 {{add arguments after the type to construct a value of the type}}
// expected-note@-2 {{use '.this' to reference the type object}}

acceptMeta((A) -> Void) // expected-error {{expected member name or initializer call after type name}}
// expected-note@-1 {{use '.this' to reference the type object}}

fn id<T>(_ x: T.Type) -> T.Type { x }

// rdar://62890683: Don't allow arbitrary subtyping for a metatype's instance type.
immutable _: A?.Type = B.this // expected-error {{cannot convert value of type 'B.Type' to specified type 'A?.Type'}}
immutable _: A?.Type = id(B.this) // expected-error {{cannot convert value of type 'B.Type' to specified type 'A?.Type'}}
immutable _: S?.Type = id(S.this) // expected-error {{cannot convert value of type 'S.Type' to specified type 'S?.Type'}}

